--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
   <!-- Nawigacja -->
   <header class="wrapper">
     <nav>
-      <div class="logo"><img src="img/logoTransparent.png" alt="Logo Gabinet kosmetyczny Scarlett"></div>
+      <a href="#"><img src="img/LogoSmall.jpg" alt="Logo Gabinet kosmetyczny Scarlett"></a>
       <ul>
         <li>
-          <a href="#">Start</a>
+          <a href="#">O mnie</a>
         </li>
         <li>
           <a href="#">Oferta</a>
+        </li>
+        <li>
+          <a href="#">Promocje</a>
         </li>
         <li>
           <a href="#">Galeria</a>
