Add section slider

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Nawigacja -->
   <header class="wrapper">
     <nav>
-      <a href="#"><img src="img/LogoSmall.jpg" alt="Logo Gabinet kosmetyczny Scarlett"></a>
+      <a href="#"><img src="img/logo/LogoSmall.jpg" alt="Logo Gabinet kosmetyczny Scarlett"></a>
       <ul>
         <li>
           <a href="#">O mnie</a>
@@ -35,6 +35,20 @@
       </ul>
     </nav>
   </header>
+  <!-- Slider -->
+  <section class="wrapper slider">
+    <div id="carousel">
+      <li><img src="img/gabinet/DSC_0200.JPG" alt=""></li>
+      <li><img src="img/gabinet/DSC_0203.JPG" alt=""></li>
+      <li><img src="img/gabinet/DSC_0204.JPG" alt=""></li>
+      <li><img src="img/gabinet/DSC_0205.JPG" alt=""></li>
+      <li><img src="img/gabinet/DSC_0206.JPG" alt=""></li>
+      <li><img src="img/gabinet/DSC_0210.JPG" alt=""></li>
+      <li><img src="img/gabinet/DSC_0219.JPG" alt=""></li>
+      <li><img src="img/gabinet/DSC_0202.JPG" alt=""></li>
+
+    </div>
+  </section>
 
 </body>
 
