Add section aboutMe

--- a/index.html
+++ b/index.html
@@ -46,7 +46,26 @@
       <li><img src="img/gabinet/DSC_0210.JPG" alt=""></li>
       <li><img src="img/gabinet/DSC_0219.JPG" alt=""></li>
       <li><img src="img/gabinet/DSC_0202.JPG" alt=""></li>
-
+    </div>
+  </section>
+  <section class="wrapper aboutMe">
+    <h1>O mnie</h1>
+    <div class="aboutBox">
+      <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a3fa46375259c39d07d0227e8ade6daa&auto=format&fit=crop&w=334&q=80"
+        alt="">
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates commodi eveniet illo fugit autem
+        excepturi ullam eius vero iste provident numquam, doloremque inventore similique. Sit, cupiditate, optio
+        corrupti tempora quibusdam soluta repellendus deleniti a architecto aut nemo sunt distinctio nostrum sint
+        fugiat animi omnis doloremque id molestiae? Necessitatibus fugiat fuga illo rem modi laboriosam cumque ea quod
+        dolore mollitia velit facere voluptatum molestiae consectetur illum, eius tempore magnam sapiente nisi soluta
+        harum in ad? Deserunt atque odio minus voluptatibus quod! dolore mollitia velit facere voluptatum molestiae
+        consectetur illum, eius tempore magnam sapiente nisi soluta
+        <div class="school">
+          <p>Szkolenia </p>
+          <p>Certyfikaty </p>
+        </div>
+      </p>
+    </div>
     </div>
   </section>
 
