Add section Offer

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Gabinet Kosmetyczny Scarlett</title>
   <link rel="stylesheet" href="reset.min.css">
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700&amp;subset=latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Saira+Condensed:400,700&amp;subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -35,6 +36,7 @@
       </ul>
     </nav>
   </header>
+
   <!-- Slider -->
   <section class="wrapper slider">
     <div id="carousel">
@@ -48,8 +50,10 @@
       <li><img src="img/gabinet/DSC_0202.JPG" alt=""></li>
     </div>
   </section>
+
+  <!-- AboutMe -->
   <section class="wrapper aboutMe">
-    <h1>O mnie</h1>
+    <h2>O mnie</h2>
     <div class="aboutBox">
       <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a3fa46375259c39d07d0227e8ade6daa&auto=format&fit=crop&w=334&q=80"
         alt="">
@@ -69,6 +73,53 @@
     </div>
   </section>
 
+  <!-- Offer -->
+  <section class="offer">
+    <h2>Oferta</h2>
+    <section class="treatment">
+      <div class="name">
+        <p>Zabiegi na twarz</p>
+        <div class="show">+</div>
+      </div>
+      <article>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio repellat debitis voluptatibus assumenda
+          vero.</p>
+      </article>
+    </section>
+    <section class="treatment">
+      <div class="name">
+        <p>Maniciure / Pediciure</p>
+        <div class="show">+</div>
+      </div>
+      <article>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio repellat debitis voluptatibus assumenda
+          vero. </p>
+      </article>
+    </section>
+    <section class="treatment">
+      <div class="name">
+        <p>Depilacja laserowa IPL</p>
+        <div class="show">+</div>
+      </div>
+      <article>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio repellat debitis voluptatibus assumenda
+          vero. </p>
+      </article>
+    </section>
+    <section class="treatment">
+      <div class="name">
+        <p>Inne</p>
+        <div class="show">+</div>
+      </div>
+      <article>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio repellat debitis voluptatibus assumenda
+          vero.</p>
+      </article>
+      <h3>Nie znalazłaś zabiegu? Zadzwoń! I dowiedz się więcej: <span>518 596 258</span></h3>
+    </section>
+  </section>
+
+  <!-- Sale -->
 </body>
 
 </html>
