Add section Promo

--- a/index.html
+++ b/index.html
@@ -120,6 +120,25 @@
   </section>
 
   <!-- Sale -->
+  <section class="wrapper sale">
+    <div class="promo">
+      <h3>Aktualne promocje: </h3>
+      <div class="promotions">
+        <div class="promotion">
+          <h4>Mikrodermabrazja <span>69 zł</span> <span>59 zł</span></h4>
+          <p>Promocja trwa do 31.12.2018r.</p>
+          <p>Do końca promocji pozostało:</p>
+          <div class="timePromo">
+            <span class="days">28 dni</span>
+            <span class="hours">15 godz.</span>
+            <span class="mins">35 min.</span>
+            <span class="sec">45 sek.</span></div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Gallery -->
 </body>
 
 </html>
