--- a/index.html
+++ b/index.html
@@ -139,6 +139,27 @@
   </section>
 
   <!-- Gallery -->
+
+  <section class="gallery wrapper">
+    <h3>Galeria</h3>
+    <div class="box">
+      <div class="face">
+        <p> Zabiegi na twarz</p>
+      </div>
+      <div class="maniciure">
+        <p> Maniciure / Pediciure</p>
+      </div>
+      <div class="laser">
+        <p>Depilacja laserowa IPL</p>
+      </div>
+      <div class="office">
+        <p>Gabinet</p>
+      </div>
+    </div>
+
+  </section>
+
+  <!-- Contact -->
 </body>
 
 </html>
