Add section Contact, Footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link rel="stylesheet" href="reset.min.css">
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script:400,700&amp;subset=latin-ext" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Saira+Condensed:400,700&amp;subset=latin-ext" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+    crossorigin="anonymous">
+
+
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -125,7 +129,7 @@
       <h3>Aktualne promocje: </h3>
       <div class="promotions">
         <div class="promotion">
-          <h4>Mikrodermabrazja <span>69 zł</span> <span>59 zł</span></h4>
+          <h4>Peeling kawitacyjny <span>69 zł</span> <span>59 zł</span></h4>
           <p>Promocja trwa do 31.12.2018r.</p>
           <p>Do końca promocji pozostało:</p>
           <div class="timePromo">
@@ -160,6 +164,42 @@
   </section>
 
   <!-- Contact -->
+
+  <section class="contact">
+    <h3>Kontakt</h3>
+    <div class="wrapper">
+      <div class="contactBox">
+        <div class="hoursOffice">
+          <h4><i class="far fa-clock"></i> Czynne:</h4>
+          <p>Poniedziałek 9-18</p>
+          <p>Wtorek 9-18</p>
+          <p>Środa 9-18</p>
+          <p>Czwartek 12-20</p>
+          <p>Piątek 12-20</p>
+          <p>Sobota 9-14</p>
+        </div>
+        <div class="adress">
+          <h4><i class="fas fa-home"></i> Adres: </h4>
+          <p>ul. Zadębie 2b</p>
+          <p>Skierniewice</p>
+          <p>tel: 526 956 852</p>
+        </div>
+        <div class="media">
+          <i class="fab fa-google-plus-square"></i>
+          <i class="fab fa-facebook-square"></i>
+        </div>
+
+      </div>
+      <div class="map"></div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+
+  <section class="footer">
+    <p>All right reserved. Copyright © 2018 </p>
+    <p>Strona wykonana przez: <a href="https://github.com/goskanowak"> Małgorzata Nowak</a></p>
+  </section>
 </body>
 
 </html>
