Add section Voucher

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link href="https://fonts.googleapis.com/css?family=Saira+Condensed:400,700&amp;subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
     crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash&amp;subset=latin-ext" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Mali:400,700&amp;subset=latin-ext" rel="stylesheet">
 
 
   <link rel="stylesheet" href="style.css">
@@ -85,6 +87,19 @@
         <p>Zabiegi na twarz</p>
         <div class="show">+</div>
       </div>
+      <!-- usunąć klase active -->
+      <article class="active">
+        <p>Mikrodermabrazja</p>
+        <p>Peeling kawitacyjny</p>
+        <p>Foto-odmładzanie</p>
+        <p>Oczyszczanie twarzy</p>
+      </article>
+    </section>
+    <section class="treatment">
+      <div class="name">
+        <p>Zabiegi na ciało</p>
+        <div class="show">+</div>
+      </div>
       <article>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio repellat debitis voluptatibus assumenda
           vero.</p>
@@ -123,6 +138,25 @@
     </section>
   </section>
 
+  <!-- Voucher -->
+  <section class="voucher wrapper">
+    <div class="voucherBox">
+      <div class="voucherOffer">
+        <h4>Bony podarunkowe</h4>
+        <p>Szukasz oryginalnego prezentu dla bliskich? Podaruj coś co będą mogli długo wspominać. Voucher to
+          niewątpliwie ekskluzywny i nietuzinkowy prezent, który każdy obdarowany odbierze jako miły i szczery gest.
+          Każdy bon podarunkowy dopasujemy do indywidualnych potrzeb. Możesz wybrać każdy zabieg z oferty lub
+          przeznaczyć dowolną kwotę.
+        </p>
+        <p> Bony podarunkowe można zakupić w naszym salonie. </p>
+      </div>
+      <div class="voucherImg">
+        <img src="https://images.unsplash.com/photo-1509024102370-fd7802f4a7a7?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=dafb02973bd11d98b6fb7e3390a338c3&auto=format&fit=crop&w=334&q=80"
+          alt="">
+      </div>
+    </div>
+  </section>
+
   <!-- Sale -->
   <section class="wrapper sale">
     <div class="promo">
@@ -143,12 +177,14 @@
   </section>
 
   <!-- Gallery -->
-
   <section class="gallery wrapper">
     <h3>Galeria</h3>
     <div class="box">
       <div class="face">
         <p> Zabiegi na twarz</p>
+      </div>
+      <div class="body">
+        <p> Zabiegi na ciało</p>
       </div>
       <div class="maniciure">
         <p> Maniciure / Pediciure</p>
@@ -164,7 +200,6 @@
   </section>
 
   <!-- Contact -->
-
   <section class="contact">
     <h3>Kontakt</h3>
     <div class="wrapper">
@@ -195,7 +230,6 @@
   </section>
 
   <!-- Footer -->
-
   <section class="footer">
     <p>All right reserved. Copyright © 2018 </p>
     <p>Strona wykonana przez: <a href="https://github.com/goskanowak"> Małgorzata Nowak</a></p>
