--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
       <a href="#"><img src="img/logo/LogoSmall.jpg" alt="Logo Gabinet kosmetyczny Scarlett"></a>
       <ul>
         <li>
-          <a href="#">O mnie</a>
+          <a href="#aboutMe">O mnie</a>
         </li>
         <li>
-          <a href="#">Oferta</a>
+          <a href="#offer">Oferta</a>
         </li>
         <li>
-          <a href="#">Promocje</a>
+          <a href="#promo">Promocje</a>
         </li>
         <li>
-          <a href="#">Galeria</a>
+          <a href="#gallery">Galeria</a>
         </li>
         <li>
-          <a href="#">Kontakt</a>
+          <a href="#contact">Kontakt</a>
         </li>
       </ul>
     </nav>
@@ -59,6 +59,7 @@
 
   <!-- AboutMe -->
   <section class="wrapper aboutMe">
+    <a name="aboutMe"></a>
     <h2>O mnie</h2>
     <div class="aboutBox">
       <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a3fa46375259c39d07d0227e8ade6daa&auto=format&fit=crop&w=334&q=80"
@@ -81,74 +82,504 @@
 
   <!-- Offer -->
   <section class="offer">
+    <a name="offer"></a>
     <h2>Oferta</h2>
-    <section class="treatment">
-      <div class="name">
-        <p>Zabiegi na twarz</p>
+    <section class="treatments">
+      <div class="name addLine">
+        <p>Kosmetyka dłoni i paznokci</p>
         <div class="show">+</div>
       </div>
       <!-- usunąć klase active -->
-      <article class="active">
-        <p>Mikrodermabrazja</p>
-        <p>Peeling kawitacyjny</p>
-        <p>Foto-odmładzanie</p>
-        <p>Oczyszczanie twarzy</p>
+      <article class="treatment active">
+        <div>
+          <p>Manicure z odżywką </p>
+          <p>25zł</p>
+        </div>
+        <div>
+          <p>Manicure klasyczny jeden kolor</p>
+          <p>35zł</p>
+        </div>
+        <div>
+          <p>Manicure hybrydowy </p>
+          <p>50zł</p>
+        </div>
+        <div>
+          <p>Przedłużanie paznokci metodą żelową na szablonie</p>
+          <p>100zł</p>
+        </div>
+        <div>
+          <p>Uzupełnienie paznokci żelowych</p>
+          <p>60-90zł</p>
+        </div>
+        <div>
+          <p>Manicure męski</p>
+          <p>30zł</p>
+        </div>
+        <div>
+          <p>Zabieg odżywczo - wygładzający "Jedwabiste dłonie" </p>
+          <p>30zł</p>
+        </div>
+        <div>
+          <p>Parafina</p>
+          <p>30zł</p>
+        </div>
       </article>
     </section>
-    <section class="treatment">
+    <section class="treatments">
       <div class="name">
-        <p>Zabiegi na ciało</p>
+        <p>Kosmetyka stóp</p>
         <div class="show">+</div>
       </div>
-      <article>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio repellat debitis voluptatibus assumenda
-          vero.</p>
+      <article class="treatment">
+        <div>
+          <p>Pedicure klasyczny z odżywką </p>
+          <p>60zł</p>
+        </div>
+        <div>
+          <p>Pedicure klasyczny jeden kolor</p>
+          <p>70zł</p>
+        </div>
+        <div>
+          <p>Pedicure hybrydowy</p>
+          <p>100zł</p>
+        </div>
+        <div>
+          <p>Parafina</p>
+          <p>50zł</p>
+        </div>
       </article>
     </section>
-    <section class="treatment">
+    <section class="treatments">
       <div class="name">
-        <p>Maniciure / Pediciure</p>
+        <p>Laseroterapia</p>
         <div class="show">+</div>
       </div>
-      <article>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio repellat debitis voluptatibus assumenda
-          vero. </p>
+      <article class="epil active">
+        <div class="epilShow">
+          <div class="name">
+            <p>Twarz</p>
+            <div class="show">+</div>
+          </div>
+          <div class="IPLActive">
+            <div>
+              <p>Wąsik / Broda</p>
+              <p>100zł</p>
+            </div>
+            <div>
+              <p>Szyja</p>
+              <p>100 - 150zł</p>
+            </div>
+
+            <div>
+              <p>Baki</p>
+              <p>100zł</p>
+            </div>
+            <div>
+              <p>Cała twarz</p>
+              <p>200zł</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="epilShow">
+          <div class="name">
+            <p>Ręce</p>
+            <div class="show">+</div>
+          </div>
+          <div class="IPLActive">
+            <div>
+              <p>Ramiona</p>
+              <p>150zł</p>
+            </div>
+
+            <div>
+              <p>Przedramiona</p>
+              <p>150zł</p>
+            </div>
+
+            <div>
+              <p>Dłonie</p>
+              <p>100zł</p>
+            </div>
+          </div>
+
+          <div class="epilShow">
+            <div class="name">
+              <p>Nogi</p>
+              <div class="show">+</div>
+            </div>
+            <div class="IPLActive">
+              <div>
+                <p>Uda</p>
+                <p>180zł</p>
+              </div>
+              <div>
+                <p>Łydki</p>
+                <p>150zł</p>
+              </div>
+              <div>
+                <p>Stopy</p>
+                <p>100zł</p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="epilShow">
+          <div class="name">
+            <p>Tułów</p>
+            <div class="show">+</div>
+          </div>
+          <div class="IPLActive">
+            <div>
+              <p>Kark</p>
+              <p>100 - 150zł</p>
+            </div>
+            <div>
+              <p>Plecy</p>
+              <p>150 - 200zł</p>
+            </div>
+
+            <div>
+              <p>Klatka piersiowa</p>
+              <p>100 - 150zł</p>
+            </div>
+
+            <div>
+              <p>Okolice sutków</p>
+              <p>100zł</p>
+            </div>
+
+            <div>
+              <p>Pachy</p>
+              <p>100zł</p>
+            </div>
+
+            <div>
+              <p>Brzuch</p>
+              <p>100 - 150zł</p>
+            </div>
+
+            <div>
+              <p>Linia brzucha</p>
+              <p>100zł</p>
+            </div>
+
+            <div>
+              <p>Bikini (pachwiny)</p>
+              <p>100 - 150zł</p>
+            </div>
+
+            <div>
+              <p>Bikini całkowite</p>
+              <p>150 - 200zł</p>
+            </div>
+
+            <div>
+              <p>Pośladki</p>
+              <p>100 - 150zł</p>
+            </div>
+
+            <div>
+              <p>Szpara pośladkowa</p>
+              <p>100zł</p>
+            </div>
+          </div>
+        </div>
       </article>
     </section>
-    <section class="treatment">
+    <section class="treatments">
       <div class="name">
-        <p>Depilacja laserowa IPL</p>
+        <p>Depilacja woskiem</p>
         <div class="show">+</div>
       </div>
-      <article>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio repellat debitis voluptatibus assumenda
-          vero. </p>
+      <article class="treatment">
+        <div>
+          <p>Wąsik</p>
+          <p>10zł</p>
+        </div>
+        <div>
+          <p>Broda</p>
+          <p>10zł</p>
+        </div>
+        <div>
+          <p>Wąsik + broda</p>
+          <p>15zł</p>
+        </div>
+        <div>
+          <p>ręce</p>
+          <p>40zł</p>
+        </div>
+        <div>
+          <p>pachy</p>
+          <p>30zł</p>
+        </div>
+        <div>
+          <p>łydki</p>
+          <p>35zł</p>
+        </div>
+        <div>
+          <p>Uda</p>
+          <p>40zł</p>
+        </div>
+        <div>
+          <p>całe nogi</p>
+          <p>70zł</p>
+        </div>
+        <div>
+          <p>Bikini</p>
+          <p>40zł</p>
+        </div>
+
       </article>
     </section>
-    <section class="treatment">
+    <section class="treatments">
       <div class="name">
-        <p>Inne</p>
+        <p>Stylizacja brwi i rzęs (analiza, kolor, kształt)</p>
         <div class="show">+</div>
       </div>
-      <article>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio repellat debitis voluptatibus assumenda
-          vero.</p>
+      <article class="treatment">
+        <div>
+          <p>Regulacja brwi</p>
+          <p>7 - 10zł</p>
+        </div>
+
+        <div>
+          <p>Henna brwi + regulacja</p>
+          <p>25zł</p>
+        </div>
+
+        <div>
+          <p>Henna rzęs</p>
+          <p>10zł</p>
+        </div>
+
+        <div>
+          <p>Regulacja brwi</p>
+          <p>7 - 10zł</p>
+        </div>
+
+        <div>
+          <p>Henna brwi + regulacja + henna rzęs</p>
+          <p>35zł</p>
+        </div>
       </article>
-      <h3>Nie znalazłaś zabiegu? Zadzwoń! I dowiedz się więcej: <span>518 596 258</span></h3>
+
+
+
     </section>
+    <section class="treatments">
+      <div class="name">
+        <p>Kosmetologia - pielęgnacja twarzy i ciała</p>
+        <div class="show">+</div>
+      </div>
+      <article class="treatment">
+        <div>
+          <p>Oczyszczanie manualne twarzy </p>
+          <p>100zł</p>
+        </div>
+        <div>
+          <p>Mikrodermabrazja diamentowa ( 30 min + maska)</p>
+          <p>120 - 150zł</p>
+        </div>
+        <div>
+          <p>Mikrodermabrazja diamentowa pleców </p>
+          <p>150zł</p>
+        </div>
+        <div>
+          <p>Peeling kawitacyjny twarzy ( 20min + maska) </p>
+          <p>80zł</p>
+        </div>
+        <div>
+          <p>złuszczenie naskórka , skóry właściwej (MONOKWASY) </p>
+          <p>100 - 200zł</p>
+        </div>
+      </article>
+    </section>
+    <section class="treatments">
+      <div class="name">
+        <p>Fale Radiowe LIFTING BEZ SKALPELA </p>
+        <div class="show">+</div>
+      </div>
+      <article class="treatment">
+        <div>
+          <p>Okolica oczu ( 10 min) </p>
+          <p>60zł</p>
+        </div>
+        <div>
+          <p>Bruzda nosowo- wargowa ( 15 min) </p>
+          <p>80zł</p>
+        </div>
+        <div>
+          <p>Okolica czoła + lwia zmarszczka ( 15min) </p>
+          <p>100zł</p>
+        </div>
+        <div>
+          <p>Twarz ( 45 min) </p>
+          <p>160zł</p>
+        </div>
+        <div>
+          <p>Twarz + szyja ( 70 min) </p>
+          <p>190zł</p>
+        </div>
+        <div>
+          <p>Ramiona ( 45min) </p>
+          <p>100zł</p>
+        </div>
+        <div>
+          <p>Brzuch / pośladki / uda ( 40/ 40/ 50 min) </p>
+          <p>130zł</p>
+        </div>
+
+        <div>
+          <p>Uda + pośladki ( 80 min) </p>
+          <p>170zł</p>
+        </div>
+
+      </article>
+    </section>
+    <section class="treatments">
+      <div class="name">
+        <p>Fotoodmładzanie</p>
+        <div class="show">+</div>
+      </div>
+      <article class="treatment">
+        <div>
+          <p>Czoło </p>
+          <p>100zł</p>
+        </div>
+        <div>
+          <p>Policzki</p>
+          <p>150zł</p>
+        </div>
+        <div>
+          <p>Bruzda nosowo - wargowa</p>
+          <p>100zł</p>
+        </div>
+        <div>
+          <p>Cała twarz </p>
+          <p>200zł</p>
+        </div>
+      </article>
+    </section>
+    <section class="treatments">
+      <div class="name">
+        <p>Zamykanie naczynek / redukcja rumienia
+          / usuwanie przebarwień (melazma, ostuda, przebarwienia)
+        </p>
+        <div class="show">+</div>
+      </div>
+      <article class="treatment">
+        <div>
+          <p>Policzki / czoło </p>
+          <p>150zł</p>
+        </div>
+        <div>
+          <p>Nos</p>
+          <p>100zł</p>
+        </div>
+        <div>
+          <p>Pojedyńcze zmiany</p>
+          <p>50 - 80zł</p>
+        </div>
+        <div>
+          <p>Cała twarz </p>
+          <p>150 - 200zł</p>
+        </div>
+      </article>
+    </section>
+    <section class="treatments">
+      <div class="name">
+        <p>Leczenie trądziku
+        </p>
+        <div class="show">+</div>
+      </div>
+      <article class="treatment">
+        <div>
+          <p>Policzki / czoło </p>
+          <p>150zł</p>
+        </div>
+        <div>
+          <p>Nos</p>
+          <p>100zł</p>
+        </div>
+        <div>
+          <p>Pojedyńcze zmiany</p>
+          <p>50 - 80zł</p>
+        </div>
+        <div>
+          <p>Cała twarz </p>
+          <p>150 - 200zł</p>
+        </div>
+      </article>
+    </section>
+    <section class="treatments">
+      <div class="name">
+        <p>Lipoliza ultradźwiękowa
+        </p>
+        <div class="show">+</div>
+      </div>
+      <article class="treatment">
+        <div>
+          <p>Ramiona / brzuch / pośladki ( 30 min) </p>
+          <p>80zł</p>
+        </div>
+        <div>
+          <p>Uda (40 min)</p>
+          <p>120zł</p>
+        </div>
+        <div>
+          <p>Nogi + pośladki (50 min) </p>
+          <p>150zł</p>
+        </div>
+        <div>
+          <p>Nogi + pośladki + brzuch ( 80 min) </p>
+          <p>180zł</p>
+        </div>
+        <div>
+          <p>Pachy </p>
+          <p>150zł</p>
+        </div>
+      </article>
+    </section>
+    <section class="treatments">
+      <div class="name">
+        <p>Zabiegi medyczne na ciało
+        </p>
+        <div class="show">+</div>
+      </div>
+      <article class="treatment">
+        <div>
+          <p>Pachy</p>
+          <p>80zł</p>
+        </div>
+        <div>
+          <p>Fale radiowe</p>
+          <p>zł</p>
+        </div>
+        <div>
+          <p>Lipoliza ultrakawitacyjna </p>
+          <p>zł</p>
+        </div>
+
+        </div>
+      </article>
+    </section>
+    <p>Powyższe ceny są cenami orientacyjnymi i nie stanowią oferty w rozumieniu przepisów Kodeksu Cywilnego.</p>
+    <h3>Nie znalazłaś zabiegu? Zadzwoń! I dowiedz się więcej: <span>518 596 258</span></h3>
   </section>
 
   <!-- Voucher -->
   <section class="voucher wrapper">
     <div class="voucherBox">
       <div class="voucherOffer">
-        <h4>Bony podarunkowe</h4>
+        <h4>Voucher</h4>
         <p>Szukasz oryginalnego prezentu dla bliskich? Podaruj coś co będą mogli długo wspominać. Voucher to
           niewątpliwie ekskluzywny i nietuzinkowy prezent, który każdy obdarowany odbierze jako miły i szczery gest.
-          Każdy bon podarunkowy dopasujemy do indywidualnych potrzeb. Możesz wybrać każdy zabieg z oferty lub
+          Każdy bon podarunkowy dopasowany jest do indywidualnych potrzeb. Możesz wybrać każdy zabieg z oferty lub
           przeznaczyć dowolną kwotę.
         </p>
-        <p> Bony podarunkowe można zakupić w naszym salonie. </p>
+        <p> Bony podarunkowe można zakupić w salonie. </p>
       </div>
       <div class="voucherImg">
         <img src="https://images.unsplash.com/photo-1509024102370-fd7802f4a7a7?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=dafb02973bd11d98b6fb7e3390a338c3&auto=format&fit=crop&w=334&q=80"
@@ -159,6 +590,7 @@
 
   <!-- Sale -->
   <section class="wrapper sale">
+    <a name="promo"></a>
     <div class="promo">
       <h3>Aktualne promocje: </h3>
       <div class="promotions">
@@ -178,6 +610,7 @@
 
   <!-- Gallery -->
   <section class="gallery wrapper">
+    <a name="gallery"></a>
     <h3>Galeria</h3>
     <div class="box">
       <div class="face">
@@ -201,6 +634,7 @@
 
   <!-- Contact -->
   <section class="contact">
+    <a name="contact"></a>
     <h3>Kontakt</h3>
     <div class="wrapper">
       <div class="contactBox">
@@ -221,18 +655,21 @@
         </div>
         <div class="media">
           <i class="fab fa-google-plus-square"></i>
-          <i class="fab fa-facebook-square"></i>
+          <a href="https://www.facebook.com/Gabinet-kosmetyczny-Scarlett-2121418338074950/" target="_blank"><i class="fab fa-facebook-square"></i></a>
         </div>
 
       </div>
-      <div class="map"></div>
+      <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d78677.39663629346!2d20.09913467565504!3d51.95823367383833!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471960563ba116f9%3A0x7928f5df207f9c10!2s96-100+Skierniewice!5e0!3m2!1spl!2spl!4v1542977309012"
+          frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
     </div>
   </section>
 
   <!-- Footer -->
   <section class="footer">
     <p>All right reserved. Copyright © 2018 </p>
-    <p>Strona wykonana przez: <a href="https://github.com/goskanowak"> Małgorzata Nowak</a></p>
+    <p>Strona wykonana przez: <a href="https://github.com/goskanowak" target="_blank"> Małgorzata Nowak</a></p>
   </section>
 </body>
 
