Change CSS to SCSS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash&amp;subset=latin-ext" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Mali:400,700&amp;subset=latin-ext" rel="stylesheet">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -45,14 +45,14 @@
   <!-- Slider -->
   <section class="slider">
     <div id="carousel">
-      <li class="slider__list"><img src="img/gabinet/DSC_0200.JPG" alt="" class="slider__img"></li>
-      <li class="slider__list"><img src="img/gabinet/DSC_0203.JPG" alt="" class="slider__img"></li>
-      <li class="slider__list"><img src="img/gabinet/DSC_0204.JPG" alt="" class="slider__img"></li>
-      <li class="slider__list"><img src="img/gabinet/DSC_0205.JPG" alt="" class="slider__img"></li>
-      <li class="slider__list"><img src="img/gabinet/DSC_0206.JPG" alt="" class="slider__img"></li>
-      <li class="slider__list"><img src="img/gabinet/DSC_0210.JPG" alt="" class="slider__img"></li>
-      <li class="slider__list"><img src="img/gabinet/DSC_0219.JPG" alt="" class="slider__img"></li>
-      <li class="slider__list"><img src="img/gabinet/DSC_0202.JPG" alt="" class="slider__img"></li>
+      <li class="slider__list"><img src="./img/gabinet/DSC_0200.JPG" alt="" class="slider__img"></li>
+      <li class="slider__list"><img src="../img/gabinet/DSC_0203.JPG" alt="" class="slider__img"></li>
+      <li class="slider__list"><img src="./img/gabinet/DSC_0204.JPG" alt="" class="slider__img"></li>
+      <li class="slider__list"><img src="./img/gabinet/DSC_0205.JPG" alt="" class="slider__img"></li>
+      <li class="slider__list"><img src="./img/gabinet/DSC_0206.JPG" alt="" class="slider__img"></li>
+      <li class="slider__list"><img src="./img/gabinet/DSC_0210.JPG" alt="" class="slider__img"></li>
+      <li class="slider__list"><img src="./img/gabinet/DSC_0219.JPG" alt="" class="slider__img"></li>
+      <li class="slider__list"><img src="./img/gabinet/DSC_0202.JPG" alt="" class="slider__img"></li>
     </div>
   </section>
 
@@ -90,10 +90,10 @@
     <section class="offer__treatments">
       <div class="offer__name addLine">
         <p class="offer__text">Kosmetyka dłoni i paznokci</p>
-        <div class="offer__show">+</div>
+        <div class="offer__show offer__show--rotate">+</div>
       </div>
       <!-- usunąć klase active -->
-      <article class="offer__treatment active">
+      <article class="offer__treatment offer--is-active">
         <div class="offer__treatment-box">
           <p>Manicure z odżywką </p>
           <p>25zł</p>
@@ -163,7 +163,7 @@
             <p>Twarz</p>
             <div class="offer__show">+</div>
           </div>
-          <div class="offer__IPL-active">
+          <div class="offer__IPL">
             <div class="offer__name offer__name--small">
               <p>Wąsik / Broda</p>
               <p>100zł</p>
@@ -189,7 +189,7 @@
             <p>Ręce</p>
             <div class="offer__show">+</div>
           </div>
-          <div class="offer__IPL-active">
+          <div class="offer__IPL">
             <div class="offer__name offer__name--small">
               <p>Ramiona</p>
               <p>150zł</p>
@@ -209,7 +209,7 @@
               <p>Nogi</p>
               <div class="offer__show">+</div>
             </div>
-            <div class="offer__IPL-active">
+            <div class="offer__IPL">
               <div class="offer__name offer__name--small">
                 <p>Uda</p>
                 <p>180zł</p>
@@ -231,7 +231,7 @@
             <p>Tułów</p>
             <div class="offer__show">+</div>
           </div>
-          <div class="offer__IPL-active">
+          <div class="offer__IPL">
             <div class="offer__name offer__name--small">
               <p>Kark</p>
               <p>100 - 150zł</p>
@@ -606,19 +606,19 @@
     <a name="gallery"></a>
     <h3 class="title">Galeria</h3>
     <div class="gallery__content">
-      <div class=" gallery__box gallery__face">
+      <div class="gallery__box gallery__face">
         <p class="gallery__text"> Zabiegi na twarz</p>
       </div>
       <div class="gallery__box gallery__body">
         <p class="gallery__text"> Zabiegi na ciało</p>
       </div>
-      <div class=" gallery__box gallery__maniciure">
+      <div class="gallery__box gallery__maniciure">
         <p class="gallery__text"> Maniciure / Pediciure</p>
       </div>
-      <div class=" gallery__box gallery__laser">
+      <div class="gallery__box gallery__laser">
         <p class="gallery__text">Depilacja laserowa IPL</p>
       </div>
-      <div class=" gallery__box gallery__office">
+      <div class="gallery__box gallery__office">
         <p class="gallery__text">Gabinet</p>
       </div>
     </div>
